2011-04-27	Michael Miousse	  <mmiousse@infoglobe.ca>
	Refactoring of classes names and files names to respect TYPO3 format, add a checkup of $GLOBALS['TYPO3_CONF_VARS']['BE']['loginSecurityLevel'] to catch the 
	case were it is empty (empty mean supechallenged by default), removing of debugs comments
	
2011-04-27	Fabien Udriot <fabien.udriot@ecodev.ch>
	*Bug #25891: Don't set the loginSecurityLevel, references 
	*Feature #3542: Standard TYPO3 authentication as fail-over, references 
	*Task #25915: Merge iglib into ig_ldap_sso_auth, references 
	*Task #26332: Code clean up, references 
	*Bug #25917: Fail when ig_ldap_sso_auth is chained with openid, resolves 
	
2011-04-20	Michael Miousse	  <mmiousse@infoglobe.ca>
	*Bug #26149: Synchronisation script do not support multi-ldap

2011-02-16 Michael Miousse  <mmiousse@infoglobe.ca>
	*Feature #13103: Allow multiple configuration records

2010-11-17 Michael Miousse  <mmiousse@infoglobe.ca>
	*Bug #10805: Backend Ldap authentification
	*Feature #10399: Users synchronisation
	*Feature #5251: Allow multiple LDAP servers to be defined
	*Feature #3542: Standard TYPO3 authentication as fail-over

2010-10-14 Patrice Caron
	*Feature #6565: Clean all cookie domain on logout

2010-10-13 Michael Miousse  <mmiousse@infoglobe.ca>
	*Feature #10244: add hook for maping field
	*Bug #10243: priority error with TYPO3 4.4.x
	*Bug #10259: Default value from TCA

2010-03-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #6918: Mapping field is too small

2010-03-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Removed naming annoyances in EM for modified tables

2010-03-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #5120: Add hook to postprocess creation of be/fe users and groups
	* Applied CGL
	* Added missing SVN properties

2010-01-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #6015: Bad CAS config variable name (thanks to Patrice Caron)

2009-08-27 Xavier Perseguers <typo3@perseguers.ch>
